Add home screen layout

--- a/client/src/app/ui/styles/_colors.scss
+++ b/client/src/app/ui/styles/_colors.scss
@@ -1,5 +1,11 @@
 $primaryColor: hsl(217, 13%, 31%);
 $accentColor: hsl(24, 97%, 74%);
+$accentColorDark: hsl(24, 50%, 60%);
 
 $white: hsl(0, 0%, 100%);
-$black: hsl(0, 0%, 100%);
+$black: hsl(0, 0%, 0%);
+$silver: hsl(0, 0%, 74%);
+$lightSilver: hsl(0, 5%, 89%);
+
+$title: hsl(270, 4%, 27%);
+$subtitle: hsl(270, 1%, 35%);
