--- a/client/src/app/ui/styles/_mixins.scss
+++ b/client/src/app/ui/styles/_mixins.scss
@@ -6,10 +6,15 @@
 	-o-transition: $properties $duration $animationFunction;
 }
 
-@mixin borderRadius($value: 100%) {
-	border-radius: $value;
-	-webkit-border-radius: $value;
-	-moz-border-radius: $value;
-	-ms-border-radius: $value;
-	-o-border-radius: $value;
+@mixin borderRadius(
+	$value1: 100%,
+	$value2: $value1,
+	$value3: $value1,
+	$value4: $value1
+) {
+	border-radius: $value1 $value2 $value3 $value4;
+	-webkit-border-radius: $value1 $value2 $value3 $value4;
+	-moz-border-radius: $value1 $value2 $value3 $value4;
+	-ms-border-radius: $value1 $value2 $value3 $value4;
+	-o-border-radius: $value1 $value2 $value3 $value4;
 }
