--- a/client/src/widgets/home/ui/footer/footer.module.scss
+++ b/client/src/widgets/home/ui/footer/footer.module.scss
@@ -5,6 +5,7 @@
 }
 
 .footer {
+	margin-top: 7rem;
 	background-color: helper.$primaryColor;
 	padding: 4rem 0 1rem;
 
@@ -18,6 +19,7 @@
 		color: helper.$white;
 		font-size: 2rem;
 		font-weight: bold;
+		line-height: 1.5;
 
 		&::after {
 			content: '';
@@ -32,6 +34,8 @@
 	&__description {
 		color: helper.$lightSilver;
 		font-size: 1.1rem;
+		line-height: 1.5;
+		max-width: 30rem;
 	}
 
 	&__form {
@@ -78,6 +82,7 @@
 		font-size: 1rem;
 		padding: 1rem 1.2rem;
 		outline: none;
+		background-color: helper.$white;
 
 		@include helper.borderRadius(2rem);
 		@include helper.transition();
@@ -88,13 +93,36 @@
 		}
 	}
 
+	&__container-message {
+		padding: 1rem 1rem 1rem 0;
+		background-color: helper.$white;
+		border: 0.125rem solid helper.$silver;
+
+		@include helper.transition();
+		@include helper.borderRadius(1.5rem);
+
+		&:has(.form__message:hover),
+		&:has(.form__message:focus) {
+			border-color: helper.$accentColor;
+		}
+	}
+
 	&__message {
+		border: none;
 		resize: none;
 		height: 10rem;
-		padding: 1rem 1.2rem;
 		font-family: inherit;
+		padding: 0 0.5rem 0 1.2rem;
 
-		@include helper.borderRadius(1.5rem);
+		&::-webkit-scrollbar-track {
+			background: helper.$lightSilver;
+
+			@include helper.borderRadius(2rem);
+		}
+
+		&::-webkit-scrollbar-thumb {
+			@include helper.borderRadius(2rem);
+		}
 	}
 
 	&__submit {
@@ -104,8 +132,8 @@
 		background-color: helper.$accentColor;
 		font-weight: 600;
 		font-size: 1.1rem;
-		padding: 1rem 2.5rem;
-		border: 0.0625rem solid helper.$accentColorDark;
+		padding: 1rem 3rem;
+		border: 0.1rem solid helper.$accentColorDark;
 		cursor: pointer;
 
 		@include helper.borderRadius(20rem);
