--- a/client/src/app/ui/styles/_colors.scss
+++ b/client/src/app/ui/styles/_colors.scss
@@ -1,9 +1,11 @@
 $primaryColor: hsl(216, 13%, 31%);
+$primaryColorDark: hsl(216, 13%, 27%);
 $accentColor: hsl(24, 97%, 74%);
-$accentColorDark: hsl(24, 50%, 60%);
+$accentColorDark: hsl(24, 50%, 65%);
 
 $white: hsl(0, 0%, 100%);
 $black: hsl(0, 0%, 0%);
+$red: hsl(359, 100%, 65%);
 $silver: hsl(0, 0%, 74%);
 $lightSilver: hsl(0, 5%, 89%);
 
