--- a/client/src/app/ui/styles/index.scss
+++ b/client/src/app/ui/styles/index.scss
@@ -15,6 +15,22 @@
 	scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar {
+	width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+	background: colors.$silver;
+}
+
+::-webkit-scrollbar-thumb {
+	background: colors.$accentColor;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: colors.$accentColorDark;
+}
+
 body {
 	font-family: fonts.$font-montserrat;
 	font-weight: normal;
