--- a/client/src/features/common/ui/sidebar/sidebar-item.module.scss
+++ b/client/src/features/common/ui/sidebar/sidebar-item.module.scss
@@ -11,7 +11,8 @@
 	@include helper.transition();
 
 	& > p {
-		font-size: 0.7rem;
+		font-size: 0.8rem;
+		line-height: 1.4;
 		margin-top: 0.2rem;
 	}
 
