--- a/client/src/features/home/ui/accordion/toggle-accordion.module.scss
+++ b/client/src/features/home/ui/accordion/toggle-accordion.module.scss
@@ -26,6 +26,7 @@
 	&__question {
 		color: helper.$title;
 		font-size: 1.1rem;
+		line-height: 1.5;
 		font-weight: 600;
 	}
 
@@ -50,6 +51,7 @@
 	&__answer {
 		color: helper.$subtitle;
 		font-size: 1rem;
+		line-height: 1.5;
 		padding: 1rem 2rem 1.5rem;
 		border: 0.125rem solid helper.$accentColor;
 		border-top: none;
