--- a/client/src/pages/not-found/ui/not-found.module.scss
+++ b/client/src/pages/not-found/ui/not-found.module.scss
@@ -15,6 +15,7 @@
 	&__title {
 		font-size: 2rem;
 		font-weight: bold;
+		line-height: 1.8;
 		color: helper.$title;
 		margin-top: 5rem;
 	}
@@ -22,6 +23,7 @@
 	&__link {
 		margin-top: 1rem;
 		font-size: 1.1rem;
+		line-height: 1.5;
 		color: helper.$subtitle;
 	}
 }
