--- a/client/src/widgets/home/ui/main/main.module.scss
+++ b/client/src/widgets/home/ui/main/main.module.scss
@@ -2,10 +2,10 @@
 
 .container {
 	display: grid;
-	grid-template-columns: repeat(2, minmax(30rem, 1fr));
-	justify-content: space-between;
-	align-items: center;
-	margin: 4rem 0;
+	grid-template-columns: minmax(15rem, 4fr) 3fr;
+	justify-content: center;
+	place-items: center end;
+	margin-top: 6rem;
 }
 
 .main {
@@ -13,51 +13,73 @@
 		text-transform: uppercase;
 		font-weight: bold;
 		color: helper.$title;
-		font-size: 2.7rem;
+		font-size: 2.8rem;
 		line-height: 1.3;
-
-		& > mark {
-			background-color: helper.$primaryColor;
-			color: helper.$accentColor;
-		}
+		margin-bottom: 2rem;
 	}
 
 	&__description {
 		color: helper.$subtitle;
 		font-size: 1.1rem;
-		margin: 1.7rem 0;
-		line-height: 1.5;
+		margin: 1rem 0;
+		line-height: 1.8;
+
+		& + .main__description {
+			font-style: italic;
+		}
+	}
+
+	&__warning {
+		color: helper.$red;
+		font-weight: 600;
 	}
 
 	&__buttons-container {
 		display: flex;
-		gap: 1.3rem;
+		gap: 1.5rem;
+		margin-top: 2rem;
 	}
 
 	&__button {
 		text-decoration: none;
-		color: helper.$title;
-		background-color: helper.$accentColor;
 		font-weight: 600;
 		font-size: 1.1rem;
-		padding: 1rem 1.5rem;
-		border: 0.0625rem solid helper.$accentColorDark;
+		padding: 1.1rem 2rem;
+		border-width: 0.1rem;
+		border-style: solid;
+		box-shadow: 0 0 0.625rem helper.$lightSilver;
 
 		@include helper.borderRadius(20rem);
 		@include helper.transition();
 
-		&-icon {
-			margin-left: 0.5rem;
+		&-survey {
+			border-color: helper.$accentColorDark;
+			background-color: helper.$accentColor;
+			color: helper.$title;
+
+			&:hover {
+				background-color: helper.$accentColorDark;
+			}
 		}
 
-		&:hover {
-			background-color: helper.$accentColorDark;
+		&-templates {
+			border-color: helper.$primaryColorDark;
+			background-color: helper.$primaryColor;
+			color: helper.$accentColor;
+
+			&-icon {
+				margin-left: 0.7rem;
+			}
+
+			&:hover {
+				background-color: helper.$primaryColorDark;
+			}
 		}
 	}
 
 	&__image {
 		display: block;
 		max-width: 100%;
-		width: 40rem;
+		width: 29rem;
 	}
 }
