--- a/client/src/widgets/home/ui/navbar/navbar.module.scss
+++ b/client/src/widgets/home/ui/navbar/navbar.module.scss
@@ -3,10 +3,11 @@
 .navbar {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	margin-top: 1.5rem;
 
 	&__logo {
-		height: 2rem;
+		height: 2.2rem;
 	}
 
 	&__menu {
