--- a/client/src/features/home/feedback/ui/feedback.module.scss
+++ b/client/src/features/home/feedback/ui/feedback.module.scss
@@ -1,76 +1,23 @@
 @use '@/app/ui/styles/helper';
 
-.container {
-	@extend %container;
-}
-
-.footer {
-	margin-top: 7rem;
-	background-color: helper.$primaryColor;
-	padding: 4rem 0 1rem;
-
-	&__form-container {
-		display: grid;
-		grid-template-columns: 2fr 3fr;
-		gap: 2rem;
-	}
-
-	&__title {
-		color: helper.$white;
-		font-size: 2rem;
-		font-weight: bold;
-		line-height: 1.5;
-
-		&::after {
-			content: '';
-			display: block;
-			height: 0.25rem;
-			width: 7rem;
-			background-color: helper.$accentColor;
-			margin: 1rem 0 1.5rem;
-		}
-	}
-
-	&__description {
-		color: helper.$lightSilver;
-		font-size: 1.1rem;
-		line-height: 1.5;
-		max-width: 30rem;
-	}
-
-	&__form {
-		display: flex;
-		flex-direction: column;
-		gap: 1.5rem;
-	}
-
-	&__menu-container {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: space-between;
-		margin: 4rem 0 0;
-	}
-
-	&__menu {
-		display: flex;
-		flex-direction: column;
-		gap: 1rem;
-	}
-
-	&__commercial {
-		text-align: center;
-		font-size: 0.9rem;
-		color: helper.$white;
-		margin-top: 4rem;
-		font-weight: 300;
-	}
-}
-
 .form {
+	display: flex;
+	flex-direction: column;
+	gap: 1.5rem;
+
 	&__container {
-		display: flex;
-		flex-direction: row;
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		align-items: end;
 		gap: 1.5rem;
+	}
+
+	&__error {
+		font-size: 1rem;
+		font-weight: 600;
+		color: helper.$red;
+		margin: 0.5rem 0;
+		display: inline-block;
 	}
 
 	&__username,
@@ -141,24 +88,6 @@
 
 		&:hover {
 			background-color: helper.$accentColorDark;
-		}
-	}
-}
-
-.menu {
-	&__list {
-		list-style-type: none;
-	}
-
-	&__item {
-		color: helper.$white;
-		text-decoration: none;
-		cursor: pointer;
-
-		@include helper.transition();
-
-		&:hover {
-			color: helper.$accentColor;
 		}
 	}
 }
