--- a/client/src/app/ui/styles/_colors.scss
+++ b/client/src/app/ui/styles/_colors.scss
@@ -8,6 +8,8 @@ $black: hsl(0, 0%, 0%);
 $red: hsl(359, 100%, 65%);
 $silver: hsl(0, 0%, 74%);
 $lightSilver: hsl(0, 5%, 89%);
+$yellow: hsl(48, 80%, 85%);
+$darkYellow: hsl(48, 80%, 75%);
 
 $title: hsl(270, 4%, 27%);
 $subtitle: hsl(270, 1%, 35%);
