--- a/client/src/pages/document-templates/ui/document-templates.module.scss
+++ b/client/src/pages/document-templates/ui/document-templates.module.scss
@@ -3,3 +3,12 @@
 .container {
 	@extend %container;
 }
+
+.document-templates {
+	&__filters {
+		margin: 2rem 0;
+		display: flex;
+		flex-direction: column;
+		gap: 2rem;
+	}
+}
