Add EmailJS library to fulfill the feedback feature

--- a/client/src/features/home/feedback/ui/feedback.module.scss
+++ b/client/src/features/home/feedback/ui/feedback.module.scss
@@ -86,6 +86,16 @@
 		@include helper.borderRadius(20rem);
 		@include helper.transition();
 
+		&:disabled {
+			background-color: helper.$silver;
+			border-color: helper.$primaryColorDark;
+			cursor: default;
+
+			&:hover {
+				background-color: helper.$silver;
+			}
+		}
+
 		&:hover {
 			background-color: helper.$accentColorDark;
 		}
