Add back button for survey

--- a/client/src/features/survey/actions/back/ui/survey-back.module.scss
+++ b/client/src/features/survey/actions/back/ui/survey-back.module.scss
@@ -1,7 +1,6 @@
 @use '@/app/ui/styles/helper';
 
-.button {
-	margin-top: 2rem;
+.survey__back {
 	font-size: 1rem;
 	color: helper.$accentColor;
 	background-color: helper.$primaryColor;
