--- a/client/src/features/survey/options/ui/survey-options.module.scss
+++ b/client/src/features/survey/options/ui/survey-options.module.scss
@@ -8,25 +8,11 @@
 		margin-top: 2rem;
 	}
 
-	&__proceed {
-		align-self: end;
-		font-size: 1rem;
-		color: helper.$accentColor;
-		background-color: helper.$primaryColor;
-		padding: 1rem 2.5rem;
-		font-family: inherit;
-		font-weight: 600;
-		border: 0.15rem solid helper.$primaryColorDark;
-		box-shadow: 0 0 0.625rem helper.$lightSilver;
-		outline: none;
-		cursor: pointer;
-
-		@include helper.borderRadius(2rem);
-		@include helper.transition();
-
-		&:hover {
-			background-color: helper.$primaryColorDark;
-		}
+	&__actions {
+		display: flex;
+		justify-content: space-between;
+		flex-direction: row-reverse;
+		gap: 2rem;
 	}
 }
 
