--- a/client/src/pages/view-document/ui/view-document.module.scss
+++ b/client/src/pages/view-document/ui/view-document.module.scss
@@ -1,5 +1,33 @@
 @use '@/app/ui/styles/helper';
 
 .container {
+	margin: 2rem auto;
+
 	@extend %container;
+}
+
+.view-document {
+	&__title {
+		font-size: 2rem;
+		color: helper.$title;
+		font-weight: 600;
+		line-height: 1.5;
+		margin-bottom: 2rem;
+	}
+
+	&__meta {
+		font-size: 1rem;
+		color: helper.$subtitle;
+		margin: 1rem 0;
+	}
+
+	&__frame {
+		display: block;
+		margin-top: 3rem;
+		width: 100%;
+		height: 60rem;
+		border: none;
+		outline: none;
+		background: none;
+	}
 }
