--- a/client/src/app/ui/styles/_fonts.scss
+++ b/client/src/app/ui/styles/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: 'Montserrat';
-	src: url('@/app/ui/fonts/fonts/Montserrat-Light.eot');
+	src: url('@/app/ui/fonts/Montserrat-Light.eot');
 	src: url('@/app/ui/fonts/Montserrat-Light.eot?#iefix')
 			format('embedded-opentype'),
 		url('@/app/ui/fonts/Montserrat-Light.woff2') format('woff2'),
@@ -65,8 +65,7 @@
 			format('embedded-opentype'),
 		url('@/app/ui/fonts/Montserrat-Bold.woff2') format('woff2'),
 		url('@/app/ui/fonts/Montserrat-Bold.woff') format('woff'),
-		url('@/app/ui/fonts/Montserrat-Bold.ttf') format('truetype'),
-		url('@/app/ui/fonts/Montserrat-Bold.svg#Montserrat-Bold') format('svg');
+		url('@/app/ui/fonts/Montserrat-Bold.ttf') format('truetype');
 	font-weight: bold;
 	font-style: normal;
 }
