Add 'Скачать инструкцию' button on the view document page

--- a/client/src/pages/view-document/ui/view-document.module.scss
+++ b/client/src/pages/view-document/ui/view-document.module.scss
@@ -23,8 +23,9 @@
 
 	&__frame {
 		display: block;
-		margin-top: 3rem;
-		width: 100%;
+		margin: 3rem auto 0;
+		max-width: 100%;
+		width: 60rem;
 		height: 60rem;
 		border: none;
 		outline: none;
