--- a/client/src/features/document-view/document-instruction/ui/document-instruction.module.scss
+++ b/client/src/features/document-view/document-instruction/ui/document-instruction.module.scss
@@ -7,7 +7,7 @@
 	}
 
 	&__button {
-		margin: 3rem auto;
+		margin: 3rem auto 1rem;
 		outline: none;
 		background: none;
 		border: none;
@@ -15,25 +15,26 @@
 		font-weight: 600;
 		font-family: inherit;
 		color: helper.$accentColorDark;
-		text-decoration: underline;
 		cursor: pointer;
+
+		&-icon {
+			text-decoration: underline;
+			font-size: 1.1rem;
+			padding-left: 0.5rem;
+		}
 	}
 
-	&__frame {
-		display: block;
-		margin: 0 auto 2rem;
-		width: 100%;
-		border: none;
-		outline: none;
-		background: none;
+	&__content {
 		max-height: 0;
 		overflow: hidden;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 
 		@include helper.transition(max-height, 0.5s, cubic-bezier(0, 1, 0, 1));
 
 		&--active {
 			max-height: 999rem;
-			height: 40rem;
 
 			@include helper.transition(
 				max-height,
@@ -41,5 +42,16 @@
 				cubic-bezier(1, 0, 1, 0)
 			);
 		}
+	}
+
+	&__frame {
+		display: block;
+		margin: 2rem auto;
+		max-width: 100%;
+		width: 60rem;
+		height: 50rem;
+		border: none;
+		outline: none;
+		background: none;
 	}
 }
