--- a/client/src/pages/search/ui/search.module.scss
+++ b/client/src/pages/search/ui/search.module.scss
@@ -1,6 +1,14 @@
 @use '@/app/ui/styles/helper';
 
+.wrapper {
+	min-height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
 .container {
+	flex: 1;
+
 	@extend %container;
 }
 
