--- a/client/src/pages/view-document/ui/view-document.module.scss
+++ b/client/src/pages/view-document/ui/view-document.module.scss
@@ -1,6 +1,13 @@
 @use '@/app/ui/styles/helper';
 
+.wrapper {
+	min-height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
 .container {
+	flex: 1;
 	margin: 2rem auto;
 
 	@extend %container;
