Make website adaptive

--- a/client/src/app/ui/styles/_placeholders.scss
+++ b/client/src/app/ui/styles/_placeholders.scss
@@ -3,3 +3,15 @@
 	margin: 0 auto;
 	padding: 0 3rem;
 }
+
+@media (max-width: 64em) {
+	.container {
+		padding: 0 2rem;
+	}
+}
+
+@media (max-width: 48em) {
+	.container {
+		padding: 0 1rem;
+	}
+}
