--- a/client/src/features/common/search/ui/search-field.module.scss
+++ b/client/src/features/common/search/ui/search-field.module.scss
@@ -23,7 +23,8 @@
 		outline: none;
 		border: none;
 		font-family: inherit;
-		font-size: 1rem;
+		font-size: 0.9rem;
+		font-size: clamp(0.9rem, 0.88rem + 0.09999999999999998vw, 1rem);
 		color: helper.$title;
 	}
 
