--- a/client/src/widgets/common/fetch-status/error/ui/error.module.scss
+++ b/client/src/widgets/common/fetch-status/error/ui/error.module.scss
@@ -4,5 +4,6 @@
 	text-align: center;
 	font-weight: bold;
 	color: helper.$red;
-	font-size: 1rem;
+	font-size: 0.9rem;
+	font-size: clamp(0.9rem, 0.88rem + 0.09999999999999998vw, 1rem);
 }
