--- a/client/src/features/home/feedback/ui/feedback.module.scss
+++ b/client/src/features/home/feedback/ui/feedback.module.scss
@@ -13,7 +13,8 @@
 	}
 
 	&__error {
-		font-size: 1rem;
+		font-size: 0.9rem;
+		font-size: clamp(0.9rem, 0.88rem + 0.09999999999999998vw, 1rem);
 		font-weight: 600;
 		color: helper.$red;
 		margin: 0.5rem 0;
@@ -26,7 +27,8 @@
 		width: 100%;
 		border: 0.125rem solid helper.$silver;
 		color: helper.$title;
-		font-size: 1rem;
+		font-size: 0.9rem;
+		font-size: clamp(0.9rem, 0.88rem + 0.09999999999999998vw, 1rem);
 		padding: 1rem 1.2rem;
 		outline: none;
 		background-color: helper.$white;
@@ -78,7 +80,8 @@
 		color: helper.$title;
 		background-color: helper.$accentColor;
 		font-weight: 600;
-		font-size: 1.1rem;
+		font-size: 0.9rem;
+		font-size: clamp(0.9rem, 0.86rem + 0.2000000000000001vw, 1.1rem);
 		padding: 1rem 3rem;
 		border: 0.1rem solid helper.$accentColorDark;
 		cursor: pointer;
@@ -98,6 +101,32 @@
 
 		&:hover {
 			background-color: helper.$accentColorDark;
+		}
+	}
+}
+
+@media (max-width: 64em) {
+	.form {
+		&__submit {
+			align-self: center;
+			width: 100%;
+		}
+	}
+}
+
+@media (max-width: 48em) {
+	.form {
+		&__container {
+			display: block;
+		}
+
+		&__username {
+			margin-bottom: 1.5rem;
+		}
+
+		&__error {
+			display: block;
+			text-align: center;
 		}
 	}
 }
