--- a/client/src/features/survey/actions/reset/ui/survey-reset.module.scss
+++ b/client/src/features/survey/actions/reset/ui/survey-reset.module.scss
@@ -1,7 +1,8 @@
 @use '@/app/ui/styles/helper';
 
 .survey__reset {
-	font-size: 1rem;
+	font-size: 0.9rem;
+	font-size: clamp(0.9rem, 0.88rem + 0.09999999999999998vw, 1rem);
 	color: helper.$accentColor;
 	background-color: helper.$primaryColor;
 	padding: 1rem 2.5rem;
