--- a/client/src/pages/not-found/ui/not-found.module.scss
+++ b/client/src/pages/not-found/ui/not-found.module.scss
@@ -5,6 +5,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	margin: 2rem;
 
 	&__image {
 		max-width: 100%;
@@ -13,7 +14,9 @@
 	}
 
 	&__title {
-		font-size: 2rem;
+		font-size: 1.5rem;
+		font-size: clamp(1.5rem, 1.4rem + 0.5vw, 2rem);
+		text-align: center;
 		font-weight: bold;
 		line-height: 1.8;
 		color: helper.$title;
@@ -22,8 +25,17 @@
 
 	&__link {
 		margin-top: 1rem;
-		font-size: 1.1rem;
+		font-size: 0.9rem;
+		font-size: clamp(0.9rem, 0.86rem + 0.2000000000000001vw, 1.1rem);
 		line-height: 1.5;
 		color: helper.$subtitle;
+	}
+}
+
+@media (max-width: 43.125em) {
+	.not-found {
+		&__image {
+			width: 20rem;
+		}
 	}
 }
