--- a/client/src/pages/view-document/ui/view-document.module.scss
+++ b/client/src/pages/view-document/ui/view-document.module.scss
@@ -9,21 +9,25 @@
 .container {
 	flex: 1;
 	margin: 2rem auto;
+	padding: 0 2rem;
 
 	@extend %container;
 }
 
 .view-document {
 	&__title {
-		font-size: 2rem;
+		font-size: 1.5rem;
+		font-size: clamp(1.5rem, 1.4rem + 0.5vw, 2rem);
 		color: helper.$title;
 		font-weight: 600;
 		line-height: 1.5;
 		margin-bottom: 2rem;
+		overflow-wrap: anywhere;
 	}
 
 	&__meta {
-		font-size: 1rem;
+		font-size: 0.9rem;
+		font-size: clamp(0.9rem, 0.88rem + 0.09999999999999998vw, 1rem);
 		color: helper.$subtitle;
 		margin: 1rem 0;
 	}
@@ -37,5 +41,17 @@
 		border: none;
 		outline: none;
 		background: none;
+	}
+}
+
+@media (max-width: 48em) {
+	.view-document {
+		&__title {
+			text-align: center;
+		}
+
+		&__meta {
+			text-align: center;
+		}
 	}
 }
