--- a/client/src/widgets/common/loader/ui/loader.module.scss
+++ b/client/src/widgets/common/loader/ui/loader.module.scss
@@ -7,7 +7,8 @@
 	align-items: center;
 
 	&__title {
-		font-size: 1.8rem;
+		font-size: 1.1rem;
+		font-size: clamp(1.1rem, 0.9600000000000001rem + 0.7vw, 1.8rem);
 		font-weight: 600;
 		color: helper.$subtitle;
 	}
