--- a/client/src/widgets/home/main/ui/main.module.scss
+++ b/client/src/widgets/home/main/ui/main.module.scss
@@ -13,14 +13,16 @@
 		text-transform: uppercase;
 		font-weight: bold;
 		color: helper.$title;
-		font-size: 2.8rem;
+		font-size: 2rem;
+		font-size: clamp(2rem, 1.84rem + 0.7999999999999998vw, 2.8rem);
 		line-height: 1.3;
 		margin-bottom: 2rem;
 	}
 
 	&__description {
 		color: helper.$subtitle;
-		font-size: 1.1rem;
+		font-size: 0.9rem;
+		font-size: clamp(0.9rem, 0.86rem + 0.2000000000000001vw, 1.1rem);
 		margin: 1rem 0;
 		line-height: 1.8;
 	}
@@ -34,7 +36,8 @@
 	&__button {
 		text-decoration: none;
 		font-weight: 600;
-		font-size: 1.1rem;
+		font-size: 0.9rem;
+		font-size: clamp(0.9rem, 0.86rem + 0.2000000000000001vw, 1.1rem);
 		padding: 1.1rem 2rem;
 		border-width: 0.15rem;
 		border-style: solid;
@@ -72,5 +75,59 @@
 		display: block;
 		max-width: 100%;
 		width: 29rem;
+	}
+}
+
+@media (max-width: 64em) {
+	.container {
+		display: block;
+	}
+
+	.main {
+		&__title {
+			text-align: center;
+		}
+
+		&__description {
+			text-align: center;
+		}
+
+		&__buttons-container {
+			justify-content: center;
+		}
+
+		&__image {
+			display: none;
+		}
+	}
+}
+
+@media (max-width: 37.5em) {
+	.main {
+		&__buttons-container {
+			flex-direction: column;
+		}
+
+		&__button {
+			text-align: center;
+		}
+	}
+}
+
+@media (max-width: 26.5625em) {
+	.container {
+		margin-top: 3rem;
+	}
+}
+
+@media (max-width: 23.4375em) {
+	.main {
+		&__button {
+			&-templates {
+				&-icon {
+					display: none;
+				}
+			}
+		}
 	}
 }
