--- a/client/src/widgets/survey/document/ui/survey-document.module.scss
+++ b/client/src/widgets/survey/document/ui/survey-document.module.scss
@@ -2,10 +2,12 @@
 
 .text {
 	margin-top: 2rem;
-	font-size: 1.3rem;
+	font-size: 1rem;
+	font-size: clamp(1rem, 0.94rem + 0.30000000000000004vw, 1.3rem);
 	color: helper.$title;
 	text-align: center;
 	line-height: 1.5;
+	overflow-wrap: anywhere;
 }
 
 .link {
