Add current active element for mobile sidebar

--- a/client/src/features/common/sidebar/sidebar-mobile/ui/sidebar-mobile.module.scss
+++ b/client/src/features/common/sidebar/sidebar-mobile/ui/sidebar-mobile.module.scss
@@ -62,6 +62,14 @@
 		&:hover {
 			color: helper.$silver;
 		}
+
+		&--active {
+			color: helper.$accentColor;
+
+			&:hover {
+				color: helper.$accentColor;
+			}
+		}
 	}
 }
 
