--- a/client/src/app/ui/styles/index.scss
+++ b/client/src/app/ui/styles/index.scss
@@ -11,6 +11,20 @@
 	-moz-box-sizing: border-box;
 }
 
+* {
+	-webkit-tap-highlight-color: transparent;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+
+	&:focus {
+		outline: none !important;
+	}
+}
+
 :root {
 	scroll-behavior: smooth;
 }
