--- a/client/src/features/document-view/document-instruction/ui/document-instruction.module.scss
+++ b/client/src/features/document-view/document-instruction/ui/document-instruction.module.scss
@@ -57,3 +57,13 @@
 		background: none;
 	}
 }
+
+@media (max-width: 23.4375em) {
+	.view-document {
+		&__button {
+			&-icon {
+				display: none;
+			}
+		}
+	}
+}
