--- a/client/src/features/survey/options/ui/survey-options.module.scss
+++ b/client/src/features/survey/options/ui/survey-options.module.scss
@@ -45,7 +45,7 @@
 	}
 }
 
-@media (max-width: 70.625em) {
+@media (max-width: 65.625em) {
 	.options {
 		&__item {
 			width: 50rem;
@@ -53,7 +53,7 @@
 	}
 }
 
-@media (max-width: 60.625em) {
+@media (max-width: 55.625em) {
 	.options {
 		&__item {
 			width: 40rem;
@@ -61,7 +61,7 @@
 	}
 }
 
-@media (max-width: 50.625em) {
+@media (max-width: 45.625em) {
 	.options {
 		&__item {
 			width: 30rem;
@@ -69,7 +69,7 @@
 	}
 }
 
-@media (max-width: 40.625em) {
+@media (max-width: 35.625em) {
 	.options {
 		&__item {
 			width: 20rem;
@@ -84,10 +84,18 @@
 	}
 }
 
-@media (max-width: 30.625em) {
+@media (max-width: 25.625em) {
 	.options {
 		&__item {
-			width: 100%;
+			width: 15rem;
+		}
+	}
+}
+
+@media (max-width: 20.625em) {
+	.options {
+		&__item {
+			// width: 14rem;
 		}
 	}
 }
