Fix some minor changes in design/content of the website

--- a/client/src/features/home/faq/accordion-item/ui/accordion-item.module.scss
+++ b/client/src/features/home/faq/accordion-item/ui/accordion-item.module.scss
@@ -41,6 +41,7 @@
 	&__content {
 		max-height: 0;
 		overflow: hidden;
+		cursor: default;
 
 		@include helper.transition(max-height, 0.5s, cubic-bezier(0, 1, 0, 1));
 
