--- a/client/src/widgets/home/main/ui/main.module.scss
+++ b/client/src/widgets/home/main/ui/main.module.scss
@@ -16,6 +16,7 @@
 		font-size: 2rem;
 		font-size: clamp(2rem, 1.84rem + 0.7999999999999998vw, 2.8rem);
 		line-height: 1.3;
+		margin-right: 1rem;
 		margin-bottom: 2rem;
 	}
 
