--- a/client/src/features/common/sidebar/sidebar-mobile/ui/sidebar-mobile.module.scss
+++ b/client/src/features/common/sidebar/sidebar-mobile/ui/sidebar-mobile.module.scss
@@ -87,7 +87,7 @@
 	}
 }
 
-@media (max-height: 48.125em), (max-width: 93.75em) {
+@media (max-width: 93.75em), (max-height: 43.75em) {
 	.sidebar {
 		&__open-icon {
 			display: block;
