--- a/client/src/widgets/common/sidebar/ui/sidebar.module.scss
+++ b/client/src/widgets/common/sidebar/ui/sidebar.module.scss
@@ -8,7 +8,6 @@
 	width: 5.9rem;
 	height: 100vh;
 	border-right: 0.0625rem solid helper.$lightSilver;
-	display: none;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -27,7 +26,7 @@
 	}
 }
 
-@media (max-height: 48.125em), (max-width: 93.75em) {
+@media (max-width: 93.75em), (max-height: 43.75em) {
 	.sidebar {
 		width: 1.5rem;
 		justify-content: center;
