--- a/client/src/widgets/survey/header/ui/survey-header.module.scss
+++ b/client/src/widgets/survey/header/ui/survey-header.module.scss
@@ -28,12 +28,9 @@
 	&__title {
 		font-weight: 600;
 		font-size: 0.9rem;
+		font-size: clamp(0.9rem, 0.88rem + 0.09999999999999998vw, 1rem);
 		color: helper.$title;
 		line-height: 1.5;
-	}
-
-	&__icon {
-		margin-right: 0.5rem;
 	}
 
 	&__message {
