--- a/client/src/features/common/sidebar/sidebar-mobile/ui/sidebar-mobile.module.scss
+++ b/client/src/features/common/sidebar/sidebar-mobile/ui/sidebar-mobile.module.scss
@@ -54,6 +54,7 @@
 		margin: 1.3rem 2rem;
 		background-color: helper.$white;
 		padding: 0.3rem;
+		cursor: pointer;
 
 		@include helper.borderRadius();
 	}
@@ -87,7 +88,7 @@
 	}
 }
 
-@media (max-width: 93.75em), (max-height: 43.75em) {
+@media (max-width: 75em), (max-height: 38.125em) {
 	.sidebar {
 		&__open-icon {
 			display: block;
