--- a/client/src/widgets/common/sidebar/ui/sidebar.module.scss
+++ b/client/src/widgets/common/sidebar/ui/sidebar.module.scss
@@ -26,16 +26,20 @@
 	}
 }
 
-@media (max-width: 93.75em), (max-height: 43.75em) {
+@media (max-width: 75em), (max-height: 43.75em) {
+	.sidebar {
+		&__logo {
+			display: none;
+		}
+	}
+}
+
+@media (max-width: 75em), (max-height: 38.125em) {
 	.sidebar {
 		width: 1.5rem;
 		justify-content: center;
 
 		&__menu {
-			display: none;
-		}
-
-		&__logo {
 			display: none;
 		}
 	}
