Add hyperlinks for website

--- a/client/src/app/ui/styles/_colors.scss
+++ b/client/src/app/ui/styles/_colors.scss
@@ -10,6 +10,7 @@ $silver: hsl(0, 0%, 74%);
 $lightSilver: hsl(0, 5%, 89%);
 $yellow: hsl(48, 80%, 85%);
 $darkYellow: hsl(48, 80%, 75%);
+$blue: hsl(208, 79%, 51%);
 
 $title: hsl(270, 4%, 27%);
 $subtitle: hsl(270, 1%, 35%);
