--- a/client/src/features/home/faq/accordion-item/ui/accordion-item.module.scss
+++ b/client/src/features/home/faq/accordion-item/ui/accordion-item.module.scss
@@ -69,6 +69,10 @@
 		overflow-wrap: anywhere;
 
 		@include helper.borderRadius(0, 0, 2rem, 2rem);
+
+		& > a {
+			color: helper.$blue;
+		}
 	}
 }
 
