--- a/client/src/widgets/survey/header/ui/survey-header.module.scss
+++ b/client/src/widgets/survey/header/ui/survey-header.module.scss
@@ -10,6 +10,10 @@
 		text-align: center;
 		white-space: pre-wrap;
 		overflow-wrap: anywhere;
+
+		& > a {
+			color: helper.$blue;
+		}
 	}
 
 	&__warning {
@@ -40,5 +44,9 @@
 		margin-top: 0.5rem;
 		white-space: pre-wrap;
 		overflow-wrap: anywhere;
+
+		& > a {
+			color: helper.$blue;
+		}
 	}
 }
